Update: Potential fix to iphone potrait mode not showing the whole screen

--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -154,7 +154,7 @@ table tbody tr{
 			/* Set content height to viewport width */
 			height: 100vw;
       /* mobile viewport bug fix */
-      min-height: -webkit-fill-available;
+      height: -webkit-fill-available;
 			
       overflow-x: visible;
 			position: absolute;
